--- a/templates/taxi/car_list.html
+++ b/templates/taxi/car_list.html
@@ -8,12 +8,16 @@
     </tr>
   </thead>
   <tbody>
+  {% if car_list %}
     {% for car in car_list %}
       <tr>
         <th scope="row"><a href="{% url 'taxi:car-detail' pk=car.id %}">{{ car.id }}</a></th>
         <td>{{ car.model }}</td>
       </tr>
     {% endfor %}
+  {% else %}
+    <p>There is no cars!</p>
+  {% endif %}
   </tbody>
 </table>
 {% endblock %}
