--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -8,12 +8,16 @@
     </tr>
   </thead>
   <tbody>
+  {% if driver_list %}
     {% for driver in driver_list %}
       <tr>
         <th scope="row"><a href="{% url 'taxi:driver-detail' pk=driver.id %}">{{ driver.username }}</a></th>
         <td>{{ driver.license_number }}</td>
       </tr>
     {% endfor %}
+  {% else %}
+    <p>There is no drivers!</p>
+  {% endif %}
   </tbody>
 </table>
 {% endblock %}
